--- a/administrator/assets/css/style.css
+++ b/administrator/assets/css/style.css
@@ -83,3 +83,12 @@ html, body {
     margin: 10px;
 
 }
+
+.form-search-pagination form,
+.form-search-pagination input{
+    margin: 0px;
+}
+
+.text-size10{
+    font-size: 10px;
+}
